# QeMLflow

./: .api_token  .coverage  .coverage.Sanjeevas-iMac.local.19723.XRrIzJCx  .flake8  .gitignore  .pre-commit-config.yaml  .qemlflow-protection.yaml  CICD_IMPROVEMENT_REPORT.md  CLEANUP_PLAN.md  CLEANUP_STRATEGY.md  CODEBASE_CLEANUP_COMPLETE.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_ACHIEVEMENT_REPORT.md  COMPREHENSIVE_CI_CD_DIAGNOSTIC_REPORT.md  COMPREHENSIVE_CLEANUP_ANALYSIS.md  COMPREHENSIVE_CLEANUP_ANALYSIS_FINAL.md  COMPREHENSIVE_CODEBASE_REVIEW.md  CORE_PHILOSOPHY.md  COVERAGE_ACHIEVEMENT_FINAL.md  COVERAGE_ACHIEVEMENT_REPORT.md  COVERAGE_ACHIEVEMENT_REPORT_UPDATED.md  CRITICAL_FILES.md  CURRENT_STATUS_REPORT.md  DAY2_COMPLETE_FIX_SUMMARY.md  DAY3_CONTINUATION_STATUS.md  DAY3_MOLECULAR_DOCKING_FIX_COMPLETE.md  DAY3_MOLECULAR_DOCKING_FIX_VALIDATED.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_SUCCESS_SUMMARY.md  Dockerfile  Dockerfile.enterprise  ENTERPRISE_DEPLOYMENT_SUCCESS.md  ENVIRONMENT_SETUP.md  FINAL_COMMIT_MESSAGE.txt  FINAL_COVERAGE_ACHIEVEMENT.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_STATUS_REPORT.md  FOLDER_ORGANIZATION.md  IMPLEMENTATION_STATUS_FINAL.md  IMPROVEMENT_IMPLEMENTATION_PLAN.md  (+109 more)
.archive/archive/: CODEBASE_CLEANUP_PLAN.md  CORE_FRAMEWORK_ENHANCEMENT_PLAN.md  CURRENT_STAGE_ASSESSMENT.md  ENHANCEMENT_IMPLEMENTATION_COMPLETE.md  FINAL_STATUS_ASSESSMENT.md  INTERNAL_PARTNERSHIP_PLAN.md  LONG_TERM_IMPLEMENTATION_GUIDE.md  NEXT_PHASE_ENHANCEMENTS.md  original_drug_discovery_4292_lines.py
.artifacts/site/: 404.html  index.html  sitemap.xml
.config/: .flake8  .pre-commit-config.yaml  advanced_config.yaml  chemml_config.yaml  mkdocs.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-stability.yml  audit-trail.yml  automated-security-updates.yml  ci-cd.yml  ci.yml  code_health.yml  core-tests.yml  cross-workflow-coordination.yml  dashboard.yml  dependencies.yml  docs.yml  emergency-fallback.yml  enhanced-emergency-fallback.yml  enhanced-matrix-ci.yml  enterprise-container-orchestration.yml  enterprise-secrets-management.yml  enterprise-security-infrastructure.yml  environment-determinism.yml  experiment-tracking.yml  file-protection.yml  gradual-ci.yml  high_availability.yml  maintenance.yml  monitoring.yml  observability.yml  quick-health.yml  release.yml  resource-management.yml  scalability.yml  security.yml  simple-test.yml  staging-deployment-pipeline.yml  super-simple.yml  validation-framework.yml
.temp/logs/: monitoring_20250616_032243.json  (+3 more)
archive/: CODEBASE_CLEANUP_PLAN.md  CORE_FRAMEWORK_COMPLETION_PLAN.md  LONG_TERM_IMPLEMENTATION_GUIDE.md  original_drug_discovery_4292_lines.py
code_health/: code_health_report_20250621_113340.json  code_health_report_20250621_130805.json  latest_report.json
config/: api_stability.yml  audit_trail.yml  code_health.yml  container-security.yml  dashboard.yml  environment_determinism.yml  experiment_tracking.yml  high_availability.yml  maintenance.yml  observability.yml  performance.yml  production.yml  prometheus.yml  qemlflow.yml  resources.yml  scalability.yml  security.yml  validation_framework.yml
data/: processed  raw
docs/: CODEBASE_PHILOSOPHY_ALIGNMENT_ANALYSIS.md  CODEBASE_STRUCTURE.md  CORE_PHILOSOPHY.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ENTERPRISE_GRADE_IMPLEMENTATION_PLAN.md  FOLDER_ORGANIZATION_IMPLEMENTATION_SUMMARY.md  FOLDER_ORGANIZATION_SCALABILITY_ASSESSMENT.md  FRAMEWORK_INTEGRATION_GUIDE.md  GET_STARTED.md  LEARNING_PATHS.md  MIGRATION_GUIDE.md  PHASE_3.4_IMPLEMENTATION_LOG.md  PHASE_3.5_IMPLEMENTATION_LOG.md  PHASE_4_IMPLEMENTATION_LOG.md  PHASE_5_IMPLEMENTATION_LOG.md  PRODUCTION_GUIDE.md  PROJECT_ORGANIZATION.md  PYTORCH_LIGHTNING_CLEANUP_REPORT.md  QUICK_START.md  README.md  REFERENCE.md  USER_GUIDE.md  api_reference.md  documentation_integration_guide.md  index.md  performance_guide.md  plan.md  research_innovation_template.md
examples/: README.md  universal_tracker_demo.py  wandb_example.py
logs/: day_02_demo_student_progress.json  monitoring_20250616_032243.json  monitoring_20250620_175732.json
notebooks/: README.md  tutorials
performance_reports/: monitoring_report_0348.json
qemlflow_backup_20250617_041123/: Makefile  README.md  backup_metadata.json  changes_log.json  pyproject.toml
reports/: dashboard_report_20250621_112505.html  dashboard_report_20250621_113240.html  dashboard_report_20250621_113341.html  dashboard_report_20250621_130806.html  linting_system_robustness_analysis.md  next_steps_implementation_plan.md  phase1_cleanup_batch_fixes_session.md  phase1_lightning_batch_fixes_session.md  phase_6_3_high_availability_completion.md
scalability_data/: metrics_20250621.jsonl
scripts/: cleanup_root_folder.py  full_validate.sh  generate_enhancement_summary.py  medium_validate.sh  quick_validate.sh  rename_to_qemlflow.sh  test_rename_script.sh  validate_environment.py
site/: 404.html  index.html  sitemap.xml
test_rename_environment/: Dockerfile  pyproject.toml.bak  requirements.txt  setup.py  test_rename.sh
tests/: __init__.py  conftest.py  test_infrastructure.py  test_models.py
tools/: README.md  advanced_type_annotator.py  advanced_type_completion.py  aggressive_lean_cleanup.py  api_standardization.py  automated_standardization.py  caching_activator.py  cleanup_codebase.py  codebase_reality_check.py  diagnostics_unified.py  final_parameter_standardizer.py  focused_validation.py  import_optimizer.py  integration_test_suite.py  parameter_standardization.py  performance_optimizer.py  phase6_completion.py  production_polish_tool.py  progress_dashboard.py  resource_manager.py  safe_cleanup_analyzer.py  simple_caching_setup.py  type_annotation_analyzer.py
validation_results/: benchmark_b05ae805-dc51-41d6-a6c2-b68fca23dfa7.json  report_c41226dc-0e57-4664-8ffe-a6883e13f0fe.json  validation_692d6d7d-c35d-4fed-a13f-47de05eeb65c.json  validation_7cd0935d-11f7-440c-aac9-93caccd01ea2.json  validation_902d3339-bbaf-4f3a-a569-95c0b92eb16b.json
(+1676 files in other folders)
